refactor(auth): :recycle: Errors management improvement
Errors management improvement in registe router and correction style in toast component

--- a/src/global/styles/globals.scss
+++ b/src/global/styles/globals.scss
@@ -81,6 +81,10 @@ p {
   margin: 0;
 }
 
+.toast-container {
+  font-size: 1.4rem;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
