--- a/src/components/forms/styles.module.css
+++ b/src/components/forms/styles.module.css
@@ -12,30 +12,28 @@
   gap: 5px;
 }
 .inputContainer {
-  border-radius: 5px;
   background: rgba(59, 58, 76, 0.8);
-  height: 32px;
+  height: 3.2rem;
   display: flex;
   align-items: center;
+  border-radius: 1rem;
 }
 
 .focused {
   & > .inputIcon {
-    color: #f5be47;
+    color: #4a90e2;
   }
 }
 
 .input {
   width: 100%;
   padding: 0 5px;
-  height: 32px;
+  height: 3.2rem;
   transition: color 0.3s ease;
   color: #fff;
   font-family: Play;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+  border-radius: 0 1rem 1rem 0;
+  border: none;
 
   &::-webkit-inner-spin-button,
   &::-webkit-outer-spin-button {
@@ -59,7 +57,7 @@
   align-items: center;
   justify-content: center;
   height: 32px;
-  width: 32px;
+  width: 4rem;
   color: #fff;
   transition: color 0.3s ease;
 
@@ -80,11 +78,12 @@
 
 .button {
   display: flex;
-  background: rgba(59, 58, 76, 0.8);
+  background: var(--bt-primary);
   color: #fff;
   font-family: "Play", sans-serif;
   font-size: 16px;
-  border-radius: 5px;
+  border-radius: 1rem;
+  border: none;
   align-items: center;
   cursor: pointer;
   padding: 0;
@@ -93,7 +92,7 @@
 
   &:hover,
   &.active {
-    background: #f5be47;
+    background-color: var(--accent-blue);
   }
 
   &.main {
