--- a/src/global/styles/globals.scss
+++ b/src/global/styles/globals.scss
@@ -3,8 +3,8 @@
   --foreground: #171717;
   --base-font-size: 62.5%;
 
-  --bg-dark: #1a1a1a;
-  --bg-card: #1f1f1f;
+  --bg-dark: #212227;
+  --bg-card: #2d2d35;
   --border-container: #212121
   --text-primary: #ffffff;
   --text-secondary: #8a8a8a;
