--- a/src/components/dialog/Dialog.module.css
+++ b/src/components/dialog/Dialog.module.css
@@ -1,17 +1,3 @@
-/* Dialog.module.css */
-.dialog {
-  background: #222;
-  border-radius: 12px;
-  padding: 20px 25px;
-  color: #fff;
-  min-width: 320px;
-  max-width: 90vw;
-  border: none;
-  margin: 0;
-  position: fixed;
-  z-index: 1;
-}
-
 .dialogContainer {
   position: fixed;
   top: 0;
@@ -19,86 +5,81 @@
   right: 0;
   bottom: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1;
   width: 100%;
   height: 100%;
-
-  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 9999;
+  background-color: rgba(0, 0, 0, 0.7);
+  cursor: default;
 }
 
-/* Position */
-.dialog.center {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.dialog {
+  background: #222;
+  padding: 2rem 2.5rem;
+  color: #fff;
+  min-width: 32rem;
+  max-width: 90vw;
+  border: none;
+  margin: 0;
+  position: relative;
+  z-index: 10000;
+}
+
+.center {
+  border-radius: 1.2rem;
+  align-self: center;
+  justify-self: center;
   text-align: center;
+  position: absolute;
 }
 
-.dialog.top {
-  top: 5%;
-  left: 50%;
-  transform: translateX(-50%);
+.top {
+  align-self: flex-start;
+  justify-self: center;
 }
 
-.dialog.bottom {
-  bottom: 5%;
-  left: 50%;
-  transform: translateX(-50%);
+.bottom {
+  align-self: flex-end;
+  justify-self: center;
 }
 
-.dialog.left {
-  top: 50%;
-  left: 5%;
-  transform: translateY(-50%);
+.left {
+  align-self: center;
+  justify-self: flex-start;
 }
 
-.dialog.right {
-  top: 50%;
-  right: 5%;
-  transform: translateY(-50%);
+.right {
+  border-radius: 1.2rem 0 0 1.2rem;
+  align-self: center;
+  justify-self: flex-end;
+  position: absolute;
+  height: 100vh;
 }
 
 .dialogTitle {
-  font-size: 15px;
-  margin-bottom: 5px;
+  font-size: 1.6rem;
+  margin-bottom: 0.5rem;
   font-weight: bold;
 }
 
 .dialogDescription {
-  font-size: 10px;
-  margin-bottom: 15px;
+  font-size: 0.8rem;
+  margin-bottom: 1.5rem;
   color: #bbb;
 }
 
 .dialogContent {
-  margin-top: 10px;
+  margin-top: 1rem;
 }
 
 .closeButton {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  border: none;
-  background-color: rgba(255, 0, 0, 0.699);
+  top: 1rem;
+  right: 1rem;
+  background-color: transparent;
   cursor: pointer;
   padding: 5px;
-  color: #fff;
-  transition: background 0.2s;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 .closeButton:hover {
   background-color: rgba(255, 0, 0, 0.3);
-}
-
-.closeButtonText {
-  position: absolute;
-  left: -9999px;
-  width: 3px;
-  height: 3px;
-  overflow: hidden;
 }
