--- a/src/components/forms/styles.module.css
+++ b/src/components/forms/styles.module.css
@@ -1,3 +1,76 @@
+/* Button Styles */
+.button {
+  display: flex;
+  background: var(--bt-primary);
+  font-family: var(--font-poppins);
+  border-radius: 1rem;
+  border: none;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+
+  &:hover,
+  &.active {
+    background-color: var(--accent-blue);
+  }
+
+  &.small {
+    height: 3.2rem;
+    font-size: 14px;
+    gap: 0.4rem;
+    padding: 0 1.2rem;
+  }
+
+  &.medium {
+    height: 4.4rem;
+    font-size: 1.6rem;
+    gap: 0.8rem;
+    padding: 0 2.4rem;
+  }
+
+  &.large {
+    height: 5.2rem;
+    font-size: 1.6rem;
+    gap: 0.8rem;
+    padding: 0 3.2rem;
+  }
+
+  &.iconOnly {
+    color: #fff;
+    background: rgba(59, 58, 76, 0.5);
+    border: 1px solid transparent;
+    transition: background 0.3s, color 0.3s, border-color 0.3s;
+
+    &:hover,
+    &.active {
+      color: #f5be47;
+      border-color: #f5be47;
+      background: rgba(59, 58, 76, 1);
+    }
+  }
+
+  & > .buttonIcon {
+    width: 1.6rem;
+    height: 1.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    svg {
+      width: 1.6rem;
+      height: 1.2rem;
+    }
+  }
+
+  & > .buttonText {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+  }
+}
+
+/* Form Styles */
 .form {
   display: flex;
   flex-direction: column;
@@ -6,7 +79,8 @@
   user-select: none;
 }
 
-.formGroup {
+/* Input Styles */
+.inputGroup {
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -17,14 +91,6 @@
   display: flex;
   align-items: center;
   border-radius: 1rem;
-}
-
-.checkbox {
-  width: 2rem;
-  height: 2rem;
-}
-.checkboxContainer {
-  background-color: transparent;
 }
 
 .focused {
@@ -39,7 +105,7 @@
   height: 3.2rem;
   transition: color 0.3s ease;
   color: #fff;
-  font-family: Play;
+  font-family: var(--font-poppins);
   border-radius: 0 1rem 1rem 0;
   border: none;
 
@@ -50,9 +116,9 @@
   }
 }
 
-.formLabel {
+.inputLabel {
   color: #afaebf;
-  font-family: "Play";
+  font-family: var(--font-poppins);
   font-size: 12px;
   font-style: normal;
   font-weight: 400;
@@ -77,63 +143,18 @@
 
 .error {
   color: #ff9900b7;
-  font-family: "Play";
+  font-family: var(--font-poppins);
   font-size: 1.3rem;
   line-height: 1.3rem;
   height: 1.3rem;
   text-align: end;
 }
 
-.button {
-  display: flex;
-  background: var(--bt-primary);
-  color: #fff;
-  font-family: "Play", sans-serif;
-  font-size: 16px;
-  border-radius: 1rem;
-  border: none;
-  align-items: center;
-  cursor: pointer;
-  padding: 0;
-  transition: background-color 0.3s ease;
-  justify-content: center;
-
-  &:hover,
-  &.active {
-    background-color: var(--accent-blue);
-  }
-
-  &.main {
-    height: 32px;
-    font-size: 14px;
-  }
-
-  &.iconOnly {
-    color: #fff;
-    background: rgba(59, 58, 76, 0.5);
-    border: 1px solid transparent;
-    transition: background 0.3s, color 0.3s, border-color 0.3s;
-
-    &:hover,
-    &.active {
-      color: #f5be47;
-      border-color: #f5be47;
-      background: rgba(59, 58, 76, 1);
-    }
-  }
-
-  & > .buttonIcon {
-    width: 32px;
-    height: 32px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  & > .buttonText {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-  }
+/* Input type Checkbox Styles */
+.checkbox {
+  width: 2rem;
+  height: 2rem;
+}
+.checkboxContainer {
+  background-color: transparent;
 }
