--- a/src/global/styles/globals.scss
+++ b/src/global/styles/globals.scss
@@ -35,7 +35,7 @@ body {
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box;
@@ -47,10 +47,10 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins);
   color: var(--foreground);
-  margin: 0 0 1rem 0;
-  font-weight: bold;
+  margin: 0 ;
+  font-weight: 400;
 }
 
 h1 {
@@ -78,7 +78,7 @@ h6 {
 }
 
 a {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins);
   font-size: 1rem;
   font-weight: normal;
   color: inherit;
