refactor(dashboard): :recycle: Refactor components the dashboard and create new Setting section

--- a/src/components/dashboard/components/styles/AddTodo.module.scss
+++ b/src/components/dashboard/components/styles/AddTodo.module.scss
@@ -18,3 +18,13 @@
   cursor: pointer;
   font-size: 1.6rem;
 }
+
+.descriptionInput {
+  min-height: 50rem;
+  padding: 1rem;
+  border-radius: 1rem;
+}
+
+.button {
+  justify-content: center;
+}
