--- a/src/components/dashboard/components/styles/Completed.module.scss
+++ b/src/components/dashboard/components/styles/Completed.module.scss
@@ -20,6 +20,7 @@
 }
 
 .TodoTitle {
+  font-size: 1.4rem;
   margin: 0;
   width: 100%;
   text-align: left;
@@ -32,6 +33,7 @@
 }
 
 .description {
+  max-width: 32rem;
   margin: 0;
   text-align: left;
   height: 50rem;
@@ -41,6 +43,26 @@
   padding: 0.5rem;
   margin-bottom: 1rem;
   overflow-y: scroll;
+  scrollbar-width: thin;
+  scrollbar-color: rgb(136, 136, 136) transparent;
+}
+
+.description::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+.description::-webkit-scrollbar-track {
+  background-color: transparent;
+  border-radius: 10px;
+}
+
+.description::-webkit-scrollbar-thumb {
+  background-color: rgba(136, 136, 136, 0.5);
+  border-radius: 10px;
+}
+
+.description::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(136, 136, 136, 0.8);
 }
 
 .buttonsContainer {
