--- a/src/components/dashboard/setting/styles/Setting.module.scss
+++ b/src/components/dashboard/setting/styles/Setting.module.scss
@@ -2,8 +2,7 @@
   margin: 0 auto;
   background-color: var(--bg-card);
   max-width: var(--max-width);
-  height: 100vh;
-  padding: 0 1rem;
+  padding: 1rem 2rem;
 }
 
 .content {
