--- a/src/global/styles/globals.scss
+++ b/src/global/styles/globals.scss
@@ -12,10 +12,12 @@
   --input-fill: #2d2d2d;
   --accent-blue: #4a90e2;
   --bt-primary: #262626;
+  --bt-danger: #ff0000;
+  --bt-danger-hover: #ff0000a8;
 
   --max-width: 120rem;
-
 }
+
 /* 1rem = 10px */
 @media (prefers-color-scheme: dark) {
   :root {
