--- a/src/components/dashboard/components/styles/AddTodo.module.scss
+++ b/src/components/dashboard/components/styles/AddTodo.module.scss
@@ -8,6 +8,11 @@
     height: 1.6rem;
   }
 }
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 
 .title {
   display: flex;
@@ -19,10 +24,25 @@
   font-size: 1.6rem;
 }
 
+.input {
+  width: 100%;
+  height: 3rem;
+  padding: 0.5rem;
+  border: none;
+  background-color: transparent;
+  color: var(--text-primary);
+
+  &:focus {
+    outline: none;
+  }
+}
+
 .descriptionInput {
   min-height: 50rem;
   padding: 1rem;
   border-radius: 1rem;
+  background-color: var(--bg-card-secondary);
+  font-size: 1.6rem;
 }
 
 .button {
