--- a/src/components/settings/components/styles/Preferences.module.scss
+++ b/src/components/settings/components/styles/Preferences.module.scss
@@ -1,5 +1,5 @@
 .container {
-  width: 40rem;
+  width: 35rem;
   height: 50rem;
   border: 1px solid #555;
   border-radius: 1rem;
@@ -7,8 +7,6 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  background-color: var(--bg-card);
-  color: var(--text-color);
 }
 
 .title {
@@ -17,4 +15,12 @@
 
 .label {
   font-size: 1.4rem;
+}
+
+.button {
+  background-color: var(--bt-danger);
+
+  &:hover {
+    background-color: var(--bt-danger-hover);
+  }
 }
