--- a/src/global/styles/globals.scss
+++ b/src/global/styles/globals.scss
@@ -1,31 +1,29 @@
 :root {
   --background: #f5f5f5;
-  --foreground: #171717;
   --base-font-size: 62.5%;
 
   --bg-dark: #212227;
   --bg-card: #2d2d35;
-  --border-container: #212121
+  --bg-card-secondary: #45424233;
+  --border-container: #212121;
   --text-primary: #ffffff;
   --text-secondary: #8a8a8a;
   --border-input: #333333;
-  --input-fill: #2d2d2d;
+  --input-fill: #3b3a4ccc;
   --accent-blue: #4a90e2;
   --bt-primary: #262626;
-  --bt-danger: #ff0000;
-  --bt-danger-hover: #ff0000a8;
+  --bt-danger: #cc0a0a;
+  --bt-danger-hover: #ff00008c;
 
   --max-width: 120rem;
 }
 
-/* 1rem = 10px */
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #1c1b1f;
     --foreground: #ededed;
   }
 }
-
 
 html,
 body {
@@ -35,8 +33,8 @@ body {
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
+  color: var(--text-primary);
+  background: var(--bg-dark);
   font-family: var(--font-poppins);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -50,8 +48,8 @@ h4,
 h5,
 h6 {
   font-family: var(--font-poppins);
-  color: var(--foreground);
-  margin: 0 ;
+  color: var(--text-primary);
+  margin: 0;
   font-weight: 400;
 }
 
@@ -88,7 +86,7 @@ a {
 }
 
 p {
-   font-size: 1.4rem;
+  font-size: 1.4rem;
 }
 
 * {
@@ -101,11 +99,10 @@ p {
   font-size: 1.4rem;
 }
 
-input{
+input {
   font-size: 1.4rem;
+  background-color: var(--input-fill);
 }
-
-
 
 @media (prefers-color-scheme: dark) {
   html {
