--- a/src/global/components/forms/styles.module.css
+++ b/src/global/components/forms/styles.module.css
@@ -152,6 +152,11 @@
 }
 
 /* Input type Checkbox Styles */
+
+.checkboxGroup {
+  flex-direction: row;
+}
+
 .checkbox {
   width: 2rem;
   height: 2rem;
